# PhySim

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  drawCircle.cpp  drawTriangle.cpp
include/: glad.h
lib/: CMakeLists.txt
scripts/: buildAndInstall.bash  physim.bash  setupBuild.bash  setupRun.bash
src/: CMakeLists.txt  glad.c  main.cpp
